kupac - istorija kupovina

--- a/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/views/kupac_info.html=UTF-8
+encoding//WebContent/views/kupac_istorijaKupovina.html=UTF-8
 encoding//WebContent/views/kupac_profil.html=UTF-8
+encoding//WebContent/views/kupac_racunInfo_m.html=UTF-8
