--- a/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,9 @@ eclipse.preferences.version=1
 encoding//WebContent/views/kupac_info.html=UTF-8
 encoding//WebContent/views/kupac_istorijaKupovina.html=UTF-8
 encoding//WebContent/views/kupac_korpa.html=UTF-8
+encoding//WebContent/views/kupac_ostvareniPopusti.html=UTF-8
 encoding//WebContent/views/kupac_profil.html=UTF-8
+encoding//WebContent/views/kupac_racun1.html=UTF-8
+encoding//WebContent/views/kupac_racun2.html=UTF-8
 encoding//WebContent/views/kupac_racunInfo_m.html=UTF-8
+encoding//WebContent/views/kupac_unosBodova_m.html=UTF-8
