--- a/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,8 @@ encoding//WebContent/views/kupac_korpa.html=UTF-8
 encoding//WebContent/views/kupac_ostvareniPopusti.html=UTF-8
 encoding//WebContent/views/kupac_profil.html=UTF-8
 encoding//WebContent/views/kupac_racunInfo_m.html=UTF-8
+encoding//WebContent/views/prijava.html=UTF-8
 encoding//WebContent/views/prodavac.html=UTF-8
 encoding//WebContent/views/prodavac_narudzbe.html=UTF-8
 encoding//WebContent/views/prodavac_racunInfo_m.html=UTF-8
+encoding//WebContent/views/registracija.html=UTF-8
