--- a/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/controllers/prijava_Controller.js=UTF-8
 encoding//WebContent/controllers/prodavac_Controller.js=UTF-8
 encoding//WebContent/controllers/prodavac_narudzbeController.js=UTF-8
 encoding//WebContent/views/kupac.html=UTF-8
@@ -14,3 +15,4 @@ encoding//WebContent/views/prodavac.html=UTF-8
 encoding//WebContent/views/prodavac_narudzbe.html=UTF-8
 encoding//WebContent/views/prodavac_racunInfo_m.html=UTF-8
 encoding//WebContent/views/registracija.html=UTF-8
+encoding/<project>=UTF-8
