--- a/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProjaraWeb/.settings/org.eclipse.core.resources.prefs
@@ -12,6 +12,7 @@ encoding//WebContent/views/kupac_profil.html=UTF-8
 encoding//WebContent/views/kupac_racunInfo_m.html=UTF-8
 encoding//WebContent/views/prijava.html=UTF-8
 encoding//WebContent/views/prodavac.html=UTF-8
+encoding//WebContent/views/prodavac_artikli.html=UTF-8
 encoding//WebContent/views/prodavac_narudzbe.html=UTF-8
 encoding//WebContent/views/prodavac_racunInfo_m.html=UTF-8
 encoding//WebContent/views/registracija.html=UTF-8
